--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <title>Cadastro de Usuários</title>
+    <link
+    rel="stylesheet"
+    href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+  />
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -40,7 +46,7 @@
         <ul id="consulta-list" class="consulta-list"></ul>
       </div>
   
-  <script src="index.js"></script>
+  <script src="/index.js"></script>
 
 </body>
 </html>
